# pymc-mlflow-example

./: .gitignore  .pre-commit-config.yaml  03-pymc-autologging.py  README.md  environment.yml  kick-off.sh  pyproject.toml  utils.py
04-pymc-marketing-mmm/: README.md  __main__.py  run-config.yaml
